# CLogDemo

./: .gitignore  settings.gradle
CLog/: build.gradle
CLog/src/androidTest/java/com/example/clog/: ExampleInstrumentedTest.java
CLog/src/main/: AndroidManifest.xml
CLog/src/main/cpp/: CLog.cpp  CMakeLists.txt  ScopedJstring.cpp  ScopedJstring.h  appender.cpp  appender.h  autobuffer.cpp  autobuffer.h  complier_util.h  logBuffer.cpp  logBuffer.h  logCrypt.cpp  logCrypt.h  ptrbuffer.cpp  ptrbuffer.h  xloggerbase.cpp  xloggerbase.h
CLog/src/main/java/com/example/clog/: CLog.java  Log.java
app/: build.gradle
app/src/androidTest/java/com/example/clogdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/clogdemo/: ExampleUnitTest.kt
clog/: CMakeLists.txt  build.gradle
clog/src/main/cpp/: appender.cpp  appender.h  autobuffer.cc  clog.cpp  log_crypt.cc  log_crypt.h  mapped_file.h  ptrbuffer.cc  xlogger_category.cc  xlogger_interface.cpp  xlogger_interface.h  xloggerbase.c  xloggerbase.h
clog/src/main/cpp/jni/: comm_function.cc  comm_function.h  managed_jnienv.cc  managed_jnienv.h  scoped_jstring.cc  scoped_jstring.h
clog/src/main/java/com/example/clog/: Log.java  Xlog.java
clog/src/test/java/com/example/clog/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
